util module added

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<url>https://github.com/thorsten-k/xbtjl</url>
 
 	<modules>
-		<module>core</module>
+<!-- 		<module>core</module> -->
 		<module>xml</module>
 		<module>util</module>
 	</modules>
