--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,6 @@
 		</license>
 	</licenses>
 
-
-	
 	<developers>
 		<developer>
 			<id>1</id>
@@ -42,8 +40,9 @@
 	</developers>
 
     <properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<my.build.directory>target</my.build.directory>
-			<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
     	<compiler-source.version>1.6</compiler-source.version>
     	<compiler-target.version>1.6</compiler-target.version>
     	<maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
