--- a/util/pom.xml
+++ b/util/pom.xml
@@ -49,6 +49,19 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.jbencode</groupId>
+			<artifactId>jbencode</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<!-- Commons -->
+		<dependency>
+			<groupId>commons-jxpath</groupId>
+			<artifactId>commons-jxpath</artifactId>
+		</dependency>
+		
+		<!-- Test -->
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<type>jar</type>
@@ -69,9 +82,6 @@
 			<artifactId>commons-lang</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>commons-jxpath</groupId>
-			<artifactId>commons-jxpath</artifactId>
-		</dependency>
+		
 	</dependencies>
 </project>
