--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -11,23 +11,8 @@
 	
     <artifactId>xbtjl-xml</artifactId>
     <packaging>jar</packaging>
-    <name>jbtl XML</name>
-   
-	<build>
-		<plugins>
-	         <plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<inherited>true</inherited>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<source>${compiler-source.version}</source>
-					<target>${compiler-target.version}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-		</plugins>
-   </build>
-   
+    <name>XBTJL - XML</name>
+      
 	<dependencies>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
