--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<url>https://github.com/thorsten-k/xbtjl</url>
 
 	<modules>
-		<module>core</module>
+<!-- 		<module>core</module> -->
 		<module>xml</module>
 		<module>util</module>
 	</modules>
@@ -78,7 +78,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>de.kisner.xbtjl</groupId>
-				<artifactId>xbtjl-util</artifactId>
+				<artifactId>xbtjl-xml</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
