--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,7 +20,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-				
+		
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
