--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,10 @@
     <properties>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<my.build.directory>target</my.build.directory>
+    	<version.jetty>8.1.17.v20150415</version.jetty>
+		<version.jdk>1.6</version.jdk>
+		
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
-    	<compiler-source.version>1.6</compiler-source.version>
-    	<compiler-target.version>1.6</compiler-target.version>
     	<maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     	<maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
     	<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
@@ -88,12 +89,45 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>joda-time</groupId>
+				<artifactId>joda-time</artifactId>
+				<version>2.8.2</version>
+			</dependency>
+			
+			<dependency>
     	   		<groupId>net.sf.exlp</groupId>
     	   		<artifactId>exlp-bom</artifactId>
     	   		<version>0.1.11-SNAPSHOT</version>
     	   		<type>pom</type>
 				<scope>import</scope>
     	   	</dependency>
+    	   	
+    	   	<!-- Jetty -->
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-server</artifactId>
+				<version>${version.jetty}</version>
+			</dependency>
+	    	<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-servlet</artifactId>
+				<version>${version.jetty}</version>
+			</dependency>
+	        <dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-webapp</artifactId>
+				<version>${version.jetty}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-annotations</artifactId>
+				<version>${version.jetty}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-jsp</artifactId>
+				<version>${version.jetty}</version>
+			</dependency>
 			
 		</dependencies>
 	</dependencyManagement>
@@ -105,8 +139,8 @@
 				<inherited>true</inherited>
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<source>${compiler-source.version}</source>
-					<target>${compiler-target.version}</target>
+					<source>${version.jdk}</source>
+					<target>${version.jdk}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
