--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,10 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.bitlet</groupId>
+		    <artifactId>weupnp</artifactId>
+		</dependency>
 		
 		<!-- Jetty -->
 		<dependency>
