--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 				<artifactId>joda-time</artifactId>
 				<version>2.8.2</version>
 			</dependency>
+			<dependency>
+			    <groupId>org.bitlet</groupId>
+			    <artifactId>weupnp</artifactId>
+			    <version>0.1.3</version>
+			</dependency>
 			
 			<dependency>
     	   		<groupId>net.sf.exlp</groupId>
