--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,25 +16,20 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.kisner.xbtjl</groupId>
-			<artifactId>xbtjl-util</artifactId>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.kisner.xbtjl</groupId>
 			<artifactId>xbtjl-core</artifactId>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-		</dependency>
-		<dependency>
 		    <groupId>org.bitlet</groupId>
 		    <artifactId>weupnp</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>com.googlecode.lanterna</groupId>
+	        <artifactId>lanterna</artifactId>
+	        <version>3.0.0-beta1</version>
+	    </dependency>
 		
 		<!-- Jetty -->
 		<dependency>
