--- a/util/pom.xml
+++ b/util/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		
 	</dependencies>
