--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,7 @@
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     	<my.build.directory>target</my.build.directory>
     	<version.jetty>8.1.17.v20150415</version.jetty>
-		<version.jdk>1.6</version.jdk>
 		
-		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
     	<maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     	<maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
     	<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
@@ -130,11 +128,11 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<inherited>true</inherited>
-				<version>${maven-compiler-plugin.version}</version>
+				<version>2.3.2</version>
 				<configuration>
-					<source>${version.jdk}</source>
-					<target>${version.jdk}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
