--- a/util/pom.xml
+++ b/util/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>commons-jxpath</artifactId>
 		</dependency>
 		
+		<!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
