--- a/client/pom.xml
+++ b/client/pom.xml
@@ -30,6 +30,18 @@
 	        <artifactId>lanterna</artifactId>
 	        <version>3.0.0-beta1</version>
 	    </dependency>
+	    
+	    <dependency>
+      		<groupId>commons-configuration</groupId>
+ 			<artifactId>commons-configuration</artifactId>
+      		<type>jar</type>
+  			<exclusions>
+        		<exclusion>
+        			<artifactId>commons-logging</artifactId>
+        			<groupId>commons-logging</groupId>
+        		</exclusion>
+        	</exclusions>
+      	</dependency>
 		
 		<!-- Jetty -->
 		<dependency>
