changes of exlp applied

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -24,6 +24,7 @@
 		<dependency>
 			<groupId>net.sf.exlp</groupId>
 			<artifactId>exlp-xml</artifactId>
+			<classifier>javax</classifier>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
