updagraded to CXF

--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -116,4 +116,36 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+	<profiles>
+		<profile>
+			<id>javax</id>
+			<build>
+				<plugins>
+					<plugin>
+		        		<groupId>org.apache.cxf</groupId>
+		    			<artifactId>cxf-xjc-plugin</artifactId>
+		    			<version>3.3.2</version>
+		    			<executions>
+		        			<execution> 
+		            			<id>xjc</id>
+		            			<phase>generate-sources</phase>
+		            			<goals><goal>xsdtojava</goal></goals>
+		  	         			<configuration>
+									<sourceRoot>${basedir}/src/main/java</sourceRoot>
+		                			<xsdOptions>
+		                    			<xsdOption>
+											<bindingFile>${basedir}/src/main/xsd/javax.xjb</bindingFile>
+											<extensionArgs><arg>-encoding</arg><arg>UTF-8</arg><arg>-no-header</arg></extensionArgs>
+		                        			<xsd>${basedir}/src/main/xsd/xsd.xsd</xsd>
+		                    			</xsdOption>
+		                			</xsdOptions>
+		            			</configuration>
+		        			</execution>
+		    			</executions>                    
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
